# the-question

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  index.html  main.py  ms_deploy.json  package-lock.json  package.json  pnpm-lock.yaml  prd.json  prompt-for-test.md  pyproject.toml  skill-creator.md  tailwind.config.ts  tsconfig.app.json  vite.config.ts
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: ai.py  auth.py  chat_aliases.py  chats.py  market.py  me.py  memory.py  notifications.py  reports.py  router.py  search.py  skills.py  users.py
backend/app/core/: ai_models.py  config.py  env.py  logging.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  base.py  chat_message.py  enums.py  memory_item.py  report.py  skill.py  skill_favorite.py  skill_rating.py  skill_suggestion.py  skill_version.py  user.py
backend/app/schemas/: ai.py  chat.py  market.py  memory.py  report.py  skill.py  user.py
backend/app/services/: ai_skill_draft_suggestion.py  ai_tools.py  auth_service.py  chat_service.py  llm_gateway.py  market_service.py  memory_service.py  notification_service.py  openai_stream.py  report_service.py  skill_seed.py  skill_service.py
backend/reports/: ai-debug.jsonl  api_test.json
backend/skills/: market-presets.json
backend/skills/system/: chat-clarify-chain.md
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_chat.py  test_market.py  test_memory_notifications_reports.py  test_skills.py
scripts/: dev.sh
(+131 files in other folders)
